This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

10-Aug-2008 (Lars Duening)  (3.3.717)
  - Created snapshot.

10-Aug-2008 (Lars Duening)  (3.3.716)
  - Created snapshot.

10-Aug-2008 (Lars)
  - The 3.3 branch is now considered stable.

08-Aug-2008 (Zesstra)
  - (settings/morgengrauen) Updated file to include the settings currently
    used in MorgenGrauen.

06-Aug-2008 (Gnomi)
  - (files.c) Rewrote copy/move_file due to copyright issues.

26-Jul-2008 (Fuchur)
  - (object.c)
    remove tell_object_str(), and use tell_object() (#471)
    use FMT_STRING in tell_object(), to support \0 characters (#472)

19-Jul-2008 (Zesstra)
  - (array.c, backend.c, comm.c, dumpstat.c, interpret.c, mapping.c, lex.c)
    Changed format specifiers for mp_int to PRI*MPINT and some for p_int to
    PRI*PINT.

18-Jul-2008 (Zesstra)
  - (autoconf/configure.in)
     Removed check for values.h from configure.in and not used HAVE_VALUES from
       port.h - obsoleted by limits+float.h (was TODO)
     Removed self-written check for ANSI-C89 compliant compiler and used
       AC_PROG_CC_STDC.
     Removed self-written checks for uint32_t, ssize_t, size_t, off_t, long
       long and added the corresponding autoconf macros
     Removed obsolete AC_HEADER_STDC
     Added checks for C99 datatypes: (u)int8_t, (u)int16_t, (u)int32_t,
       (u)int64_t, (u)inptr_t, (u)intmax_t.
     Added size checks for intptr_t, intmax_t, long long
     Added some checks for compiler charactestics: stringenize operator in
       preprocessor, typeof. (check for restrict due to problems with
       mk_func.c still disabled)
     Added header check for stdbool.h
     Changed obsolete AC_CONFIG_HEADER to AC_CONFIG_HEADERS
  - (port.h)
     Fixed PHINT_MIN, PHINT_MAX and PHUINT_MAX in port.h. SIZEOF_CHAR_P ==
       SIZEOF_SHORT * 2 they were defined to SHORT_MAX, SHORT_MIN, USHORT_MAX,